added some comments to understand process of adding vertiports with regions easier

--- a/gym-examples/gym_examples/envs/airspace_scratch.ipynb
+++ b/gym-examples/gym_examples/envs/airspace_scratch.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4beb4943",
    "metadata": {},
    "outputs": [
@@ -473,22 +473,25 @@
     "                                        ]\n",
     ")\n",
     "\n",
-    "\n",
+    "#step 1\n",
     "airspace.make_polygon_dict('commercial')\n",
     "airspace.polygon_dict['commercial']\n",
+    "#step 2\n",
     "vertiport_list_from_poly = airspace.create_vertiports_from_polygons(airspace.polygon_dict['commercial'])\n",
-    "\n",
+    "#step 3\n",
     "vertiport_with_region = airspace.assign_region_to_vertiports(vertiport_list_from_poly)\n",
     "print(f'There are a total of {len(vertiport_with_region)} vertiports')\n",
     "\n",
     "# for vertiport in vertiport_with_region:\n",
     "#     print(f'Vertiport location {vertiport.location}, belongs to region: {vertiport.region}')\n",
     "\n",
+    "#step 4\n",
     "regions_dict = airspace.assign_vertiports_to_regions(vertiport_with_region, 4)\n",
     "    \n",
     "for region in regions_dict.keys():\n",
     "    print(f'Region {region} has {len(regions_dict[region])} vertiports')\n",
     "\n",
+    "#step 5\n",
     "sample_vertiports_from_regions = airspace.sample_vertiport_from_region(regions_dict)\n",
     "\n",
     "for vertiport in sample_vertiports_from_regions:\n",
